fixing token image stretch

--- a/assets/scss/5-layout/_containers.scss
+++ b/assets/scss/5-layout/_containers.scss
@@ -507,6 +507,7 @@ html {
             }
             .token-img {
                 padding-bottom: 34px;
+                object-fit:contain;
             }
             .token-content {
                 max-width: 620px;
